# okkam-test

./: .dockerignore  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  okkam.session.sql
api/: api-start-dev.sh  api.dockerfile
api/app/: pyproject.toml
api/app/alembic/: env.py
api/app/alembic/versions/: 26fa1fa9d3e9_create_all.py
api/app/app/: config.py  main.py
api/app/app/api/api_v1/: api.py
api/app/app/api/api_v1/endpoints/: percent.py
api/app/app/core/: intersection_query.py
api/app/app/crud/: crud_base.py  crud_respondent.py  crud_respondents.py  crud_weights.py
api/app/app/db/: base.py  base_class.py  init_db.py  session.py
api/app/app/models/: model_respondents.py  model_weights.py  percent.py
api/app/app/schemas/: constraint.py  scheme_percent.py  scheme_respondent.py  scheme_respondents.py  scheme_weights.py
api/app/data/: init_db.py
