[tool.poetry]
name = "okkam api"
version = "0.0.1"
description = "okkam API"
authors = ["Konstantin Klepikov <oformleno@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.6"
passlib = "1.7.4"
toml = "0.10.2"
pydantic = "^2.3"
pydantic-settings = "2.0.3"
python-dotenv = "1.0.0"
fastapi = "0.103"
uvicorn = {extras = ["standard"], version = ">=0.12.0"}
python-multipart = "0.0.5"
bcrypt = "4.0.1"
click = "^8.0.3"
SQLAlchemy = "2.0.23"
psycopg2 = "2.9.9"
alembic = "^1.13.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=4.6"
ipython = "^8.0.0"
mypy = "^1.0.1"
black = "^21.12b0"
isort = "^5.10.1"
autoflake = "^1.4"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.20.3"
click = "^8.1.3"
pytest-aiohttp = "^1.0.4"
httpx = "^0.23.3"
nest-asyncio = "^1.5.8"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
asyncio_mode = "auto"
